will be made on the development trunk and appear in the next quarterly release.

Those wishing to use the latest code instead of a branch release can obtain
it from source control: http://www.mediawiki.org/wiki/Download_from_SVN

=== Configuration changes in 1.17 ===
* DatabaseFunctions.php that was needed for compatibility with pre-1.3
  extensions has been removed.

=== New features in 1.17 ===
* (bug 10183) Users can now add personal styles and scripts to all skins via
  User:<name>/common.css and /common.js (if user css/js is enabled)
* (bug 22748) Add anchors on Special:ListGroupRights
* (bug 21981) Add parameter 'showfilename' to <gallery> to automatically apply
  the names of the individual files within the gallery
* (bug 12797) Add $wgGalleryOptions for adjusting of default gallery display
  options
* $wgAllowUserCssPrefs option allows disabling CSS-based preferences; which can
  improve page loading speed.
* Future-proof redirection to fragments in Gecko, so things work a little nicer
  if they fix <https://bugzilla.mozilla.org/show_bug.cgi?id=516293>.
* Support git:// and mms:// protocols by default for external links
* (bug 15810) Blocked admins can no longer unblock themselves without the
  'unblockself' permission (which they have by default)
* (bug 18499) Added "enhanced" URL parameter to switch between old and enhanced
  changes list
* (bug 22925) "sp-contributions-blocked-notice-anon" message now displayed when
  viewing contributions of a blocked IP address
* (bug 22474) {{urlencode:}} now takes an optional second paramter for type of
  escaping.

=== Bug fixes in 1.17 ===
* (bug 17560) Half-broken deletion moved image files to deletion archive
  without updating database
* (bug 22666) Submitting user block form with an invalid user name no longer
  throws an error
* (bugs 22665 and 22667) User '0' can now be unblocked and have its block
  settings changed
* (bug 22606) The body of e-mail address confirmation message is now different